# route_optimizer

./: .gitignore  07_data_to_powerBI.ipynb  README.md  pyproject.toml
data/: clients_final.json  orders.json  raw_solution.json  solution.json
notebooks/: 00_kinesis_stream_builder.ipynb  01_kinesis_stream_producer.ipynb  02_kinesis_stream_consumer.ipynb  03_setup_s3.ipynb  04_bis_prueba nuevo.ipynb  04_store_raw_data_detaltable.ipynb  05_agregador.ipynb  05_dispatcher.ipynb  06_optimizer.ipynb  06_read_transform.ipynb  07_data_to_powerBI.ipynb  aws_kinesis_stream_producer.ipynb  check.ipynb  demand_generation.ipynb  demand_generation_batch.ipynb  demand_generation_stream.ipynb  documento.ipynb  load_optimization.ipynb  routing_opt_nq.ipynb  stream.ipynb  tablas.ipynb  trials.ipynb
src/route_optimizer/: analytics.py  awsmanager.py  config.py  constants.py  consumer.py  dispatcher.py  etl_optimizer.py  main.py  optimizer.py  paths.py  pbi_analytics.py  pbi_data.py  pbi_tables.py  pipeline_analytics.py  preprocessing_optimizer.py  process_optimizer_solution.py  router.py  routes.py  routifymanager.py  schema.py  sparkmanager.py
