[tool.poetry]
name = "route-optimizer"
version = "0.1.0"
description = ""
authors = ["Borja <borjaregueral@gmail.com>"]
readme = "README.md"
packages = [{include = "route_optimizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
urllib3 = "^2.2.3"
polyline = "^2.0.2"
boto3 = "^1.35.24"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pyspark = "^3.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
